# image_crop

./: .gitmodules  README.md  pyproject.toml
docs/: FindingTheOptimalCroppedImageForGivenAspectRatio.docx  ImageCroppingFigures.pptx  ImageCroppingUsingSegmentation.docx
image_crop/: image_crop_manager.py
image_crop/pixel_segmentation/: pixel_segmentation.py
image_crop/pixel_segmentation/examples/: trainable_segmentation.py
image_crop/pixel_segmentation/examples/test/: test_trainable_segmentation.py
image_crop/tests/: test_image_crop_manager.py
tests/: test_image_crop_manager.py
