[tool.poetry]
name = "image-crop"
version = "0.1.0"
description = ""
authors = ["Dimitar Gueorguiev <dimitar_pg13@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dichotomous_image_segmentation = { path = "./dichotomous_image_segmentation/", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
